// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing Card Component match the snapshot 1`] = `
<div
  className="cardContainer-0-2-3"
  data-testid="card-container"
>
  <a
    className="link-0-2-2"
    data-testid="link-test"
    href="/movie"
    onClick={[Function]}
  >
    <div
      className="cardData-0-2-4"
    >
      <p
        className="title-0-2-1 title-d1-0-2-6"
      >
        The Lion King
      </p>
      <img
        alt="Movie"
        height="300px"
        src="https://m.media-amazon.com/images/M/MV5BMjIwMjE1Nzc4NV5BMl5BanBnXkFtZTgwNDg4OTA1NzM@._V1_SX300.jpg"
        width="290px"
      />
    </div>
  </a>
</div>
`;

exports[`testing Card Component should render Card Component 1`] = `
<div
  className="cardContainer-0-2-3"
  data-testid="card-container"
>
  <a
    className="link-0-2-2"
    href="/movie"
    onClick={[Function]}
  >
    <div
      className="cardData-0-2-4"
    >
      <p
        className="title-0-2-1 title-d0-0-2-5"
      >
        The Lion King
      </p>
      <img
        alt="Movie"
        height="300px"
        src="https://m.media-amazon.com/images/M/MV5BMjIwMjE1Nzc4NV5BMl5BanBnXkFtZTgwNDg4OTA1NzM@._V1_SX300.jpg"
        width="290px"
      />
    </div>
  </a>
</div>
`;

exports[`testing Card Component testing the Link 1`] = `
<div
  className="cardContainer-0-2-3"
  data-testid="card-container"
>
  <a
    className="link-0-2-2"
    href="/movie"
    onClick={[Function]}
  >
    <div
      className="cardData-0-2-4"
    >
      <p
        className="title-0-2-1 title-d1-0-2-6"
      >
        The Lion King
      </p>
      <img
        alt="Movie"
        height="300px"
        src="https://m.media-amazon.com/images/M/MV5BMjIwMjE1Nzc4NV5BMl5BanBnXkFtZTgwNDg4OTA1NzM@._V1_SX300.jpg"
        width="290px"
      />
    </div>
  </a>
</div>
`;
